# backtrace

./: CMakeLists.txt  engine.hpp  gameevents.hpp  main.cpp  root.hpp
camera/: camera.hpp  pinhole.hpp
event/: event.hpp
event/detail/: dispatcher.hpp  event.hpp  target.hpp
event/test/: test_dispatcher.cpp  test_performance.cpp
math/: math.hpp
math/detail/: constants.hpp  random.hpp  typedefs.hpp  vector2.hpp  vector3.hpp
object/: geometricobject.hpp
object/primitive/: plane.hpp  sphere.hpp
raytracer/: raytracer.hpp  simple.hpp
rendertarget/: rendertarget.hpp
rendertarget/screen/: screen.hpp
rendertarget/screen/sdlscreen/: sdlscreen.cpp  sdlscreen.hpp
rendertarget/screen/sdlscreen/test/: CMakeLists.txt  test_sdlscreen.cpp
rendertarget/window/: window.hpp
rendertarget/window/sdlwindow/: sdlwindow.cpp  sdlwindow.hpp
sampler/: jittered.hpp  sampler.hpp
scene/: scene.hpp
scenemanager/: scenemanager.hpp
util/: factory.hpp  ray.hpp  rgbcolor.hpp  shaderecord.hpp  tree.hpp  workqueue.hpp
util/test/: test_factory.cpp  test_tree.cpp  test_workqueue.cpp
